# x12-types

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml  check-pr.yml
docs/: 945_usage.md  segment-template.md
examples/: 945_example.rs  parse_x12.rs  render_transmission.rs  render_x12.rs
src/: lib.rs
src/util/: mod.rs
src/util/dt/: mod.rs
src/util/tm/: mod.rs
src/v003030/: mod.rs  segment.rs
src/v004010/: _940.rs  _940_doc.rs  _945_doc.rs  _945_test.rs  mod.rs  segment.rs  test.rs  test_204.rs  test_214.rs  test_301.rs  test_309.rs  test_310.rs  test_315.rs  test_322.rs  test_404.rs  test_810.rs  test_856.rs  test_940.rs  test_945.rs  test_997.rs  test_998.rs  test_segments.rs
src/v004010/segment/: b.rs  c.rs  d.rs  e.rs  f.rs  g.rs  h.rs  i.rs  j.rs  k.rs  l.rs  m.rs  mod.rs  n.rs  o.rs  p.rs  q.rs  r.rs  u.rs  w.rs  x.rs  z.rs
src/v004010/segments/: a.rs  b.rs  g.rs  i.rs  m.rs  mod.rs  p.rs  q.rs  r.rs  s.rs  t.rs  v.rs  y.rs
src/v004030/: mod.rs
src/v005010/: _270_doc.rs  _270_test.rs  _271_doc.rs  _271_test.rs  _276_claim_status.rs  _276_doc.rs  _276_test.rs  _277_doc.rs  _278_doc.rs  _820_doc.rs  _820_test.rs  _834_doc.rs  _834_test.rs  _835_doc.rs  _835_test.rs  _837_doc.rs  _837_test.rs  _850_doc.rs  _850_test.rs  _855_doc.rs  _855_test.rs  _999_doc.rs  _999_test.rs  mod.rs  segment.rs  segments_test.rs  test_271.rs  test_276.rs  test_277.rs  test_278.rs  test_820.rs  test_834.rs  test_835.rs  test_837.rs  test_segments.rs
src/v005010/segment/: a.rs  b.rs  c.rs  d.rs  e.rs  f.rs  g.rs  h.rs  i.rs  k.rs  l.rs  m.rs  mod.rs  n.rs  o.rs  p.rs  q.rs  r.rs  s.rs  t.rs  u.rs  v.rs
src/v005030/: mod.rs  segment.rs  test_404.rs
test-data/: 004010_310.edi  004010_315.edi  004010_850.edi  004010_940_openapi_schema.json  004010_940_schema.json  004060_856.edi  005010_837.edi
