[package]
name = "x12-types"
version = "0.8.2"
edition = "2021"
authors = ["Jens Walter <jens@apimeister.com>"]
license = "MIT OR Apache-2.0"
keywords = ["edi","x12"]
repository = "https://github.com/apimeister/x12-types/"
documentation = "https://docs.rs/x12-types/"
description = "Bindings for the ASC X12 EDI definitions"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.16", features = ["derive"] }
chrono = "0.4"
nom = "7"
x12-types-macros = { version = "0.2" }

[features]
default = ["v003030","v004010","v004030","v005010","v005030"]
v003030 = []
v004010 = []
v004030 = []
v005010 = []
v005030 = []
